Create all other sections

--- a/index.html
+++ b/index.html
@@ -26,5 +26,47 @@
         </div>
         <div class="image">a placeholder for an image</div>
     </div>
+
+    <div class="second">
+        <h1>Some info</h1>
+        <div class="cards">
+            <div class="card one">
+                <div class="box"> 0 </div>
+                <p>subtext under an image</p>
+            </div>
+            <div class="card two">
+                <div class="box"> 0 </div>
+                <p>subtext under an image</p>
+            </div>
+            <div class="card three">
+                <div class="box"> 0 </div>
+                <p>subtext under an image</p>
+            </div>
+            <div class="card four">
+                <div class="box"> 0 </div>
+                <p>subtext under an image</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="third">
+        <p class="quote"> a quote that says that Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, vel eos pariatur debitis ratione dolorem, animi obcaecati earum deleniti quibusdam numquam saepe aut incidunt dolore expedita tempora recusandae harum eius.</p>
+        <p class="name">someone said it</p>
+    </div>    
+
+    <div class="fourth">
+        <div class="bluebox">
+            <div class="text">
+            <p>Call to action</p>
+            <p>Click here and you are going to be the happiest person on Earth</p>
+            </div>
+            <button class="secondbutton">Sign up</button>
+        </div>
+    </div>
+
+    <div class="footer">
+        <p class="footertext">Copyright</p>   
+    </div>
+    
 </body>
 </html>
