Add some images

--- a/index.html
+++ b/index.html
@@ -8,50 +8,50 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo">logo</div>
+        <div class="logo"><img src="logo.jpg"></div>
         <div class="links">
             <ul>
-            <li><a href="">link one</a></li>
-            <li><a href="">link two</a></li>
-            <li><a href="">link three</a></li>
+            <li><a href="">buildings</a></li>
+            <li><a href="">vehicles</a></li>
+            <li><a href="">other locations</a></li>
             </ul>
         </div>
     </div>  
 
     <div class="first">
         <div class="first-left">
-        <h1>Some text</h1>
-        <p>Some subtext</p>
+        <h1>Doofenshmirtz Evil Incorporated</h1>
+        <p>An evil corporation bent on producing evil.</p>
         <button>Sign up</button>
         </div>
-        <div class="image">a placeholder for an image</div>
+        <div class="image"><img src="doof.svg"></div>
     </div>
 
     <div class="second">
-        <h1>Some info</h1>
+        <h1>Some evil inventions</h1>
         <div class="cards">
             <div class="card one">
                 <div class="box"> 0 </div>
-                <p>subtext under an image</p>
+                <p>Ugly-inator</p>
             </div>
             <div class="card two">
                 <div class="box"> 0 </div>
-                <p>subtext under an image</p>
+                <p>Norm</p>
             </div>
             <div class="card three">
                 <div class="box"> 0 </div>
-                <p>subtext under an image</p>
+                <p>Voice-inator</p>
             </div>
             <div class="card four">
                 <div class="box"> 0 </div>
-                <p>subtext under an image</p>
+                <p>Slave-inator</p>
             </div>
         </div>
     </div>
 
     <div class="third">
-        <p class="quote"> a quote that says that Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolorum, vel eos pariatur debitis ratione dolorem, animi obcaecati earum deleniti quibusdam numquam saepe aut incidunt dolore expedita tempora recusandae harum eius.</p>
-        <p class="name">someone said it</p>
+        <p class="quote"> Behold! </p>
+        <p class="name"> Dr. Doofenshmirtz</p>
     </div>    
 
     <div class="fourth">
