Complete adding content and styling

--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@
 </head>
 <body>
     <div class="header">
-        <div class="logo"><img src="logo.jpg"></div>
+        <div class="logo"><img src="images/logo.jpg"></div>
         <div class="links">
             <ul>
-            <li><a href="">buildings</a></li>
-            <li><a href="">vehicles</a></li>
-            <li><a href="">other locations</a></li>
+            <li><a href="">evil inventions</a></li>
+            <li><a href="">evil schemes</a></li>
             </ul>
         </div>
     </div>  
@@ -21,51 +20,57 @@
     <div class="first">
         <div class="first-left">
         <h1>Doofenshmirtz Evil Incorporated</h1>
-        <p>An evil corporation bent on producing evil.</p>
-        <button>Sign up</button>
+        <p>...where being evil is not debated!</p>
+        <button>Become an investor</button>
         </div>
-        <div class="image"><img src="doof.svg"></div>
+        <div class="first-right">
+        <div class="image"><img src="images/doof.svg"></div>
+        </div>
     </div>
 
     <div class="second">
-        <h1>Some evil inventions</h1>
+        <h1>Behold! Some of the most evil inators!</h1>
         <div class="cards">
             <div class="card one">
-                <div class="box"> 0 </div>
-                <p>Ugly-inator</p>
+                <div class="box"> <img src="images/Ugly-inator.webp"> </div>
+                <p><b>Ugly-inator</b></p>
+                <p> Are you tired of not being handsome? Even if your doctor says it's genetic, don't blame your parents. Blame everyone else for being better-looking that you! The Ugly-inator harnesses the horned frog's unpleasant appearance to render it's target ugly! </p>
             </div>
             <div class="card two">
-                <div class="box"> 0 </div>
-                <p>Norm</p>
+                <div class="box"> <img src="images/Copy_and_Paste-inator.webp"> </div>
+                <p><b>Copy-and-Paste-inator</b></p>
+                <p> Do you hate waiting in line? All the time wasted in stores, and amusement parks, where you could be spreading more evil! The Copy-and-Paste-inator allows you to make copies of yourself, and they will do the waiting for you. </p>
             </div>
             <div class="card three">
-                <div class="box"> 0 </div>
-                <p>Voice-inator</p>
+                <div class="box"> <img src="images/Voice-inator.webp"> </div>
+                <p><b>Voice-inator</b></p>
+                <p>Do you have a high, squeaky voice? Not anymore. The Voice-inator bio-mechanically transforms normal air into Doofelium, which will make everyone else's voice higher, making your voice deeper by comparison.</p>
             </div>
             <div class="card four">
-                <div class="box"> 0 </div>
-                <p>Slave-inator</p>
+                <div class="box"> <img src="images/Slave-inator.webp"> </div>
+                <p><b>Slave-inator</b></p>
+                <p>Don't want to celebrate your birthday alone? The crowd will do whatever the Slave-inator tells them to do!  It even has a Cleanup party button, because the worst part of a party is the cleanup, isn't it?</p>
             </div>
         </div>
     </div>
 
     <div class="third">
-        <p class="quote"> Behold! </p>
-        <p class="name"> Dr. Doofenshmirtz</p>
+        <p class="quote"> Evil doesn't always have to be on a big scale. You can spread evil in the little things you do everyday. </p>
+        <p class="name"> -Dr. Gevaarlijk, a professor of evil science </p>
     </div>    
 
     <div class="fourth">
         <div class="bluebox">
             <div class="text">
-            <p>Call to action</p>
-            <p>Click here and you are going to be the happiest person on Earth</p>
+            <p><b>Let's Get Evil!</b></p>
+            <p>If you've ever wanted to throw your money at a wild, unpredictable, and mostly safe venture... this is it. Click that button right over there and you'll experience the true joy of supporting an evil genius!</p>
             </div>
-            <button class="secondbutton">Sign up</button>
+            <button class="secondbutton">Become an investor</button>
         </div>
     </div>
 
     <div class="footer">
-        <p class="footertext">Copyright</p>   
+        <p class="footertext">Copyright © The Odin Project 2025</p>   
     </div>
     
 </body>
